adds a counter that decrements whenever player enters a guess as a new functional component

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 h1{
   text-align: center;
 }
+#counter{
+  text-align: center;
+  font-size: 5rem;
+}
 #square{
   height: 200px;
   width: 200px;
