hitting the treasure will display a message that the player has won the game

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 h1{
   text-align: center;
 }
+#winCard{
+  text-align: center;
+  font-size: 10rem;
+}
 #counter{
   text-align: center;
   font-size: 5rem;
