button appears when game ends allowing player to restart game

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,8 @@ h1{
   flex-flow: row wrap;
   margin: 0 auto;
 }
+#restartButton{
+  text-align: center;
+  font-size: 5rem;
+  border: 5px solid black;
+}
